Fix: better contrast for small tags

--- a/htdocs/css/theme-dark.css
+++ b/htdocs/css/theme-dark.css
@@ -211,3 +211,6 @@ body.theme-dark .nav-link.active {
   border-color: #1d2124 !important;
 }
 
+body.theme-dark small {
+  color: #aaa;
+}
